doc/windows/VC/64bit/single_card/gts.h

typedef struct  
{
	double time;
	long segmentUsed;
	long segmentHead;
	long segmentTail;
} TCrdTime;
//////////////////////////////////////////////////////////////////////////
//Smart Home
//////////////////////////////////////////////////////////////////////////
#define HOME_STAGE_IDLE						(0)
#define HOME_STAGE_START					(1)
#define HOME_STAGE_ON_HOME_LIMIT_ESCAPE	    (2)
#define HOME_STAGE_SEARCH_LIMIT				(10)
#define HOME_STAGE_SEARCH_LIMIT_STOP		(11)
#define HOME_STAGE_SEARCH_LIMIT_ESCAPE		(13)
#define HOME_STAGE_SEARCH_LIMIT_RETURN		(15)
#define HOME_STAGE_SEARCH_LIMIT_RETURN_STOP	(16)
#define HOME_STAGE_SEARCH_HOME				(20)
#define HOME_STAGE_SEARCH_HOME_STOP	    	(22)
#define HOME_STAGE_SEARCH_HOME_RETURN		(25)
#define HOME_STAGE_SEARCH_INDEX				(30)
#define HOME_STAGE_SEARCH_GPI				(40)
#define HOME_STAGE_SEARCH_GPI_RETURN		(45)
#define HOME_STAGE_GO_HOME					(80)
#define HOME_STAGE_END						(100)
#define HOME_ERROR_NONE						(0)
#define HOME_ERROR_NOT_TRAP_MODE			(1)
#define HOME_ERROR_DISABLE					(2)
#define HOME_ERROR_ALARM					(3)
#define HOME_ERROR_STOP						(4)
#define HOME_ERROR_STAGE					(5)
#define HOME_ERROR_HOME_MODE				(6)
#define HOME_ERROR_SET_CAPTURE_HOME			(7)
#define HOME_ERROR_NO_HOME					(8)
#define HOME_ERROR_SET_CAPTURE_INDEX		(9)
#define HOME_ERROR_NO_INDEX					(10)
#define HOME_MODE_LIMIT						(10)
#define HOME_MODE_LIMIT_HOME				(11)
#define HOME_MODE_LIMIT_INDEX				(12)
#define HOME_MODE_LIMIT_HOME_INDEX			(13)
#define HOME_MODE_HOME						(20)
#define HOME_MODE_HOME_INDEX				(22)
#define HOME_MODE_INDEX						(30)
#define HOME_MODE_FORCED_HOME		    	(40)
#define HOME_MODE_FORCED_HOME_INDEX     	(41)
typedef struct  
{
	short mode;						// 回零模式
	short moveDir;					// 设置启动搜索时的运动方向
	short indexDir;					// 设置Index搜索方向
	short edge;						// 设置捕获沿
	short triggerIndex;				// 用于设置触发器，为-1表示和轴号对应
	short pad1[3];					// 保留1
	double velHigh;					// Home搜索速度
	double velLow;					// Index搜索速度
	double acc;					
	double dec;
	short smoothTime;
	short pad2[3];					// 保留2
	long homeOffset;				// 原点偏移
	long searchHomeDistance;		// Home最大搜索距离，为0表示不限制
	long searchIndexDistance;		// Index最大搜索距离，为0表示不限制
	long escapeStep;				// 脱离步长
	long pad3[2];					// 保留3
} THomePrm;
typedef struct  
{
	short run;
	short stage;
	short error;
	short pad1;
	long capturePos;
	long targetPos;
} THomeStatus;
GT_API GT_GoHome(short axis,THomePrm *pHomePrm);
GT_API GT_GetHomePrm(short axis,THomePrm *pHomePrm);
GT_API GT_GetHomeStatus(short axis,THomeStatus *pHomeStatus);
//////////////////////////////////////////////////////////////////////////
//Extern Control
//////////////////////////////////////////////////////////////////////////
typedef struct ControlConfigEx
{
	short refType;			//输出参考类型，只能取MC_AXIS
	short refIndex;			//输出轴号
	short feedbackType;		//反馈类型，为MC_ENCODER时表示反馈类型为编码器，为MC_ADC时表示反馈类型为电压
	short feedbackIndex;	//反馈通道号
	long errorLimit;		//误差极限，暂时不起作用
	short feedbackSmooth;	//反馈平滑系数，暂时不起作用
	short controlSmooth;	//控制器平滑系数，暂时不起作用

}TControlConfigEx;
GT_API GT_SetControlConfigEx(short control,TControlConfigEx *pControl);
GT_API GT_GetControlConfigEx(short control,TControlConfigEx *pControl);
//////////////////////////////////////////////////////////////////////////
//Adc filter
//////////////////////////////////////////////////////////////////////////
typedef struct AdcConfig
{
	short active;	
	short reverse;
	double a;			//输入电压线性变换a值，取值为1
	double b;			//输入电压线性变换b值，取值为0
	short filterMode;	//滤波模式，0-FIR滤波模式，1-IIR滤波模式

} TAdcConfig;
GT_API GT_SetAdcConfig(short adc,TAdcConfig *pAdc);
GT_API GT_GetAdcConfig(short adc,TAdcConfig *pAdc);
GT_API GT_SetAdcFilterPrm(short adc,double k);
GT_API GT_GetAdcFilterPrm(short adc,double *pk);
//////////////////////////////////////////////////////////////////////////
//Superimposed
//////////////////////////////////////////////////////////////////////////
GT_API GT_SetControlSuperimposed(short control,short superimposedType,short superimposedIndex);
GT_API GT_GetControlSuperimposed(short control,short *pSuperimposedType,short *pSuperimposedIndex);
//////////////////////////////////////////////////////////////////////////
GT_API GT_ZeroLaserOnTime(short channel);
GT_API GT_GetLaserOnTime(short channel,unsigned long *pTime);
GT_API GT_SetProfileScale(short axis,long alpha,long beta);
GT_API GT_GetProfileScale(short axis,long *pAlpha,long *pBeta);
GT_API GT_SetEncoderScale(short encoder,long alpha,long beta);
GT_API GT_GetEncoderScale(short encoder,long *pAlpha,long *pBeta);
GT_API GT_MultiAxisOn(unsigned long mask);
GT_API GT_MultiAxisOff(unsigned long mask);
GT_API GT_SetAxisOnDelayTime(unsigned short ms);
GT_API GT_GetAxisOnDelayTime(unsigned short *pMs);
GT_API GT_SetLaserDisTable1D(short count,double *pRatio,long *pPos,double minPower,double maxPower,double *pLimitPower,short channel=0);
GT_API GT_SetLaserDisTable2D(short axisIndex[2],short count[2],double *pRatio,long *pXPos,long *pYPos, 
							 double minPower,double maxPower,double *pLimitPower,short channel=0);
GT_API GT_SetLaserDisTable2DEx(short axisIndex[2],short count[2],double *pRatio,long posBegin[2],long posStep[2], 
							   double minPower,double maxPower,double *pLimitPower,short channel=0);
GT_API GT_SetLaserCrdMap(short channel,short map);
GT_API GT_GetLaserCrdMap(short channel,short *pMap);
//////////////////////////////////////////////////////////////////////////
//AutoFocus
//////////////////////////////////////////////////////////////////////////
GT_API GT_AutoFocus(unsigned short mode,double kp,short reverse,short chanel);
GT_API GT_SetAutoFocusRefVol(double refVol,double maxVol,double minVol,short chanel);
GT_API GT_GetAutoFocusStatus(unsigned short *pStatus,short count);
GT_API GT_ConfigAutoFocus(short chnAdc,short chanel);
GT_API GT_SetAutoFocusAuxPrm(double kf,double kd,double limitKd,short chanel);
GT_API GT_Delay(unsigned short time);
GT_API GT_DelayHighPrecision(unsigned short time);
GT_API GT_SetCrdBufferMode(short crd,short bufferMode,short fifo);
GT_API GT_GetCrdBufferMode(short crd,short *pBufferMode,short fifo);
GT_API GT_GetCrdSegmentTime(short crd,long segmentIndex,double *pSegmentTime,long *pSegmentNumber,short fifo);
GT_API GT_GetCrdTime(short crd,TCrdTime *pTime,short fifo);
GT_API GT_SetLeadScrewLink(short axis,short link);