doc/windows/Delphi/64bit/single_card/gts.pas


//Smart Home
Const HOME_STAGE_IDLE = 0;
Const HOME_STAGE_START = 1;
Const HOME_STAGE_ON_HOME_LIMIT_ESCAPE = 2;
Const HOME_STAGE_SEARCH_LIMIT = 10;
Const HOME_STAGE_SEARCH_LIMIT_STOP = 11;
Const HOME_STAGE_SEARCH_LIMIT_ESCAPE = 13;
Const HOME_STAGE_SEARCH_LIMIT_RETURN = 15;
Const HOME_STAGE_SEARCH_LIMIT_RETURN_STOP = 16;
Const HOME_STAGE_SEARCH_HOME = 20;
Const HOME_STAGE_SEARCH_HOME_STOP = 22;
Const HOME_STAGE_SEARCH_HOME_RETURN = 25;
Const HOME_STAGE_SEARCH_INDEX = 30;
Const HOME_STAGE_SEARCH_GPI = 40;
Const HOME_STAGE_SEARCH_GPI_RETURN = 45;
Const HOME_STAGE_GO_HOME = 80;
Const HOME_STAGE_END = 100;
Const HOME_ERROR_NONE = 0;
Const HOME_ERROR_NOT_TRAP_MODE = 1;
Const HOME_ERROR_DISABLE = 2;
Const HOME_ERROR_ALARM = 3;
Const HOME_ERROR_STOP = 4;
Const HOME_ERROR_STAGE = 5;
Const HOME_ERROR_HOME_MODE = 6;
Const HOME_ERROR_SET_CAPTURE_HOME = 7;
Const HOME_ERROR_NO_HOME = 8;
Const HOME_ERROR_SET_CAPTURE_INDEX = 9;
Const HOME_ERROR_NO_INDEX = 10;
Const HOME_MODE_LIMIT = 10;
Const HOME_MODE_LIMIT_HOME = 11;
Const HOME_MODE_LIMIT_INDEX = 12;
Const HOME_MODE_LIMIT_HOME_INDEX = 13;
Const HOME_MODE_HOME = 20;
Const HOME_MODE_HOME_INDEX = 22;
Const HOME_MODE_INDEX = 30;
Const HOME_MODE_FORCED_HOME = 40;
Const HOME_MODE_FORCED_HOME_INDEX = 41;

type THomePrm = record
	mode:SmallInt;					
	moveDir:SmallInt;				
	indexDir:SmallInt;				
	edge:SmallInt;					
	triggerIndex:SmallInt;	
	pad1:array[0..2] of SmallInt;					
	velHigh:Double;				
	velLow:Double;				
	acc:Double;					
	dec:Double;	
	smoothTime:SmallInt;
	pad2:array[0..2] of SmallInt;				
	homeOffset:LongInt;				
	searchHomeDistance:LongInt;		
	searchIndexDistance:LongInt;		
	escapeStep:LongInt;	
	pad3:array[0..1] of LongInt;							
end;

type THomeStatus = record
	run:SmallInt;
	stage:SmallInt;
	error:SmallInt;
	pad1:SmallInt;
	capturePos:LongInt;
	targetPos:LongInt;
end;
function GT_GoHome(axis : SmallInt;var pHomePrm:THomePrm ): SmallInt; stdcall; External GTDLL;
function GT_GetHomePrm(axis : SmallInt;out pHomePrm:THomePrm): SmallInt; stdcall; External GTDLL;
function GT_GetHomeStatus(axis : SmallInt;out pHomeStatus:THomeStatus ): SmallInt; stdcall; External GTDLL;

//Extern Control
type TControlConfigEx = record
	refType:SmallInt;			
	refIndex:SmallInt;			
	feedbackType:SmallInt;		
	feedbackIndex:SmallInt;		
	errorLimit:LongInt;		
	feedbackSmooth:SmallInt;	
	controlSmooth:SmallInt;	
end;
function GT_SetControlConfigEx(control:SmallInt;var pControl:TControlConfigEx ): SmallInt; stdcall; External GTDLL;
function GT_GetControlConfigEx(control:SmallInt;out pControl:TControlConfigEx ): SmallInt; stdcall; External GTDLL;

//Adc filter
type TAdcConfig = record
	active:SmallInt;	
	reverse:SmallInt;	
	a:Double;			
	b:Double;				
	filterMode:SmallInt;	
end;

function GT_SetAdcConfig(adc:SmallInt;var pAdc:TAdcConfig): SmallInt; stdcall; External GTDLL;
function GT_GetAdcConfig(adc:SmallInt;out pAdc:TAdcConfig): SmallInt; stdcall; External GTDLL;
function GT_SetAdcFilterPrm(adc:SmallInt;k:Double): SmallInt; stdcall; External GTDLL;
function GT_GetAdcFilterPrm(adc:SmallInt;out pk:double): SmallInt; stdcall; External GTDLL;

//Superimposed
function GT_SetControlSuperimposed(control:SmallInt;superimposedType:SmallInt;superimposedIndex:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetControlSuperimposed(control:SmallInt;out pSuperimposedType:SmallInt;out pSuperimposedIndex:SmallInt): SmallInt; stdcall; External GTDLL;

//
function GT_ZeroLaserOnTime(channel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetLaserOnTime(channel:SmallInt;out pTime:LongWord): SmallInt; stdcall; External GTDLL;

function GT_SetProfileScale(axis:SmallInt;alpha:LongInt;beta:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetProfileScale(axis:SmallInt;out pAlpha:LongInt;out pBeta:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetEncoderScale(axis:SmallInt;alpha:LongInt;beta:LongInt): SmallInt; stdcall; External GTDLL;
function GT_GetEncoderScale(axis:SmallInt;out pAlpha:LongInt;out pBeta:LongInt): SmallInt; stdcall; External GTDLL;

function GT_MultiAxisOn(mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_MultiAxisOff(mask:LongInt): SmallInt; stdcall; External GTDLL;
function GT_SetAxisOnDelayTime(ms:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAxisOnDelayTime(out pMs:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetLaserDisTable1D(count:SmallInt;var pRatio:Double;var pPos:LongInt;minPower:Double;maxPower:Double;var pLimitPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisTable2D(var axisIndex:SmallInt;var count:SmarllInt;var pRatio:Double;var pXPos:Double;var pYPos:Double;
																minPower:Double;maxPower:Double;var pLimitPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserDisTable2DEx(var axisIndex:SmallInt;var count:SmallInt;pRatio:Double;var posBegin:LongInt;var posStep:LongInt;
																	minPower:Double;maxPower:Double;var pLimitPower:Double;channel:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_SetLaserCrdMap(channel:SmallInt;map:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetLaserCrdMap(channel:SmallInt;out pMap:SmallInt): SmallInt; stdcall; External GTDLL;

//AutoFocus
function GT_AutoFocus(mode:Word;kp:Double;reverse:SmallInt;chanel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetAutoFocusRefVol(refVol:Double;maxVol:Double;minVol:Double;chanel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetAutoFocusStatus(out pStatus:Word;count:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_ConfigAutoFocus(chnAdc:SmallInt;chanel:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetAutoFocusAuxPrm(kf:Double;kd:Double;limitKd:Double;chanel:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_Delay(time:Word): SmallInt; stdcall; External GTDLL;
function GT_DelayHighPrecision(time:Word): SmallInt; stdcall; External GTDLL;

function GT_SetCrdBufferMode(crd:SmallInt;bufferMode:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdBufferMode(crd:SmallInt;out pBufferMode:SmallInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdSegmentTime(crd:SmallInt;segmentIndex:LongInt;out pSegmentTime:Double;out pSegmentNumber:LongInt;fifo:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_GetCrdTime(crd:SmallInt;out pTime:TCrdTime;fifo:SmallInt): SmallInt; stdcall; External GTDLL;

function GT_SetLeadScrewLink(axis:SmallInt;link:SmallInt): SmallInt; stdcall; External GTDLL;
function GT_SetLeadScrewLink(axis:SmallInt;out pLink:SmallInt): SmallInt; stdcall; External GTDLL;

implementation

end.
